# haskell-practice

./: .hlint.yaml  README.md  dependent_types_weirich_examples.txt  haskell-practice.cabal  stack.yaml
src/: change_name.hs  default.hs  rpar.hs
src/dependent_types/: capturing_knownat_runtime.hs  typelist_to_regularlist.hs
src/mv_on_batch/: 01_first.hs  02_using_maybe_monad.hs  03_adding_megaparsec.hs  createfiles.sh
src/next_actions/: sort_next_actions.hs
src/rwh/ch16/: CSVParser.hs  csv1.hs  csv2.hs
src/simple_lang_es/: 01-simple_lexer.hs  02-simple_parser.hs  README.md
src/simple_lang_es/test_cases/parser/4/: in03.txt  in04.txt
src/simple_lang_es/test_cases/parser/more/: in01.txt  in02.txt  in03.txt  in04.txt
src/simple_lexer/: simple_lexer.hs  uglylexer.hs
src/strict/: with-strict-extension.hs  without-extension.hs
src/type_families/: test1.hs  test2.hs  test3.hs
