name:                haskell-practice
version:             0.1.0.0
synopsis:            Just some practice code
description:         This package contains some code I've been writing to learn better haskell,
                     its practices and some libraries.
                     The cabal checker forced me to write something in the description XD
--homepage:            https://gitlab.com/helq/haskell-practice#readme
author:              Helq
maintainer:          helq@live.de
copyright:           2017 Helq
category:            Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
license:             MIT

executable mv_on_batch
  hs-source-dirs:      src/mv_on_batch
  --main-is:             01_first.hs
  main-is:             02_using_maybe_monad.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , foundation
                     , filepath

executable rpar
  hs-source-dirs:      src
  main-is:             rpar.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , time
                     , foundation
  ghc-options:         -threaded

executable default
  hs-source-dirs:      src
  main-is:             default.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
