name:                haskell-practice
version:             0.1.0.0
synopsis:            Just some practice code
description:         This package contains some code I've been writing to learn better haskell,
                     its practices and some libraries.
                     The cabal checker forced me to write something in the description XD
--homepage:            https://gitlab.com/helq/haskell-practice#readme
author:              Helq
maintainer:          helq@live.de
copyright:           2017 Helq
category:            Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
license:             MIT

-- This is commented so I can use hdevtools (with neovim), hdevtools has some problems
-- with multiple executable's in a cabal file.
-- https://github.com/hdevtools/hdevtools/issues/54

executable sort_next_actions
  hs-source-dirs:      src/next_actions
  --main-is:             01_first.hs
  --main-is:             02_using_maybe_monad.hs
  main-is:             sort_next_actions.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , TemplateHaskell
                     , RankNTypes
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , megaparsec < 6
                     , text
                     , time
                     , microlens
                     , microlens-th
  ghc-options:         -Wall

executable mv_on_batch
  hs-source-dirs:      src/mv_on_batch
  --main-is:             01_first.hs
  --main-is:             02_using_maybe_monad.hs
  main-is:             03_adding_megaparsec.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , foundation
                     , filepath
                     , megaparsec < 6
                     , text
                     , either
  ghc-options:         -Wall

--executable rpar
--  hs-source-dirs:      src
--  main-is:             rpar.hs
--  default-language:    Haskell2010
--  default-extensions:  NoImplicitPrelude
--                     , OverloadedStrings
--  build-depends:       base >= 4.7 && < 5
--                     , parallel
--                     , time
--                     , foundation
--  ghc-options:         -threaded -Wall

executable default
  hs-source-dirs:      src
  main-is:             default.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
  ghc-options:         -Wall

library
  hs-source-dirs:      src/rwh/ch16
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , megaparsec < 6
                     , text
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  exposed-modules:     CSVParser
  ghc-options:         -Wall

executable type_families
  hs-source-dirs:      src/type_families
  --main-is:             test1.hs
  main-is:             test3.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , megaparsec < 6
                     , text
  ghc-options:         -Wall

executable dependenttype
  hs-source-dirs:      src/dependent_types
  --main-is:             capturing_knownat_runtime.hs
  main-is:             typelist_to_regularlist.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , singletons
                     , vector-sized
  ghc-options:         -Wall

executable simple_lexer
  hs-source-dirs:      src/simple_lexer
  main-is:             simple_lexer.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , megaparsec < 6
                     , text
                     , basement
  ghc-options:         -Wall
